--- a/src/scss/sections/_lookOutFor.scss
+++ b/src/scss/sections/_lookOutFor.scss
@@ -8,6 +8,9 @@
   @media (max-width: 994px) {
     width: 100%;
   }
+  @media (max-width: 974px) {
+    padding: 0 24px;
+  }
 
   .look_bg_Img {
     padding: 19px 0 26px;
@@ -65,10 +68,7 @@
       @media (max-width: 899px) {
         margin-top: 0;
       }
-      // @media (max-width: 650px) {
-      //   width: 284px;
-      //   height: 399px;
-      // }
+
       .look_left_Img {
         width: 100%;
         height: 100%;
