--- a/src/scss/sections/index.scss
+++ b/src/scss/sections/index.scss
@@ -4,6 +4,9 @@
 * {
   font-family: "MM Text Pro WebTT";
 }
+body {
+  margin: 0;
+}
 
 .somata_page {
   /* Box sizing rules */
